# Design-Patterns

./: .directory  .gitignore  README.md
GOF/Adapter/: adapter.vpp
GOF/Adapter/cpp/: CMakeLists.txt  Coord.cpp  Coord.h  Manipulator.cpp  Manipulator.h  Point.cpp  Point.h  Shape.cpp  Shape.h  TextManipulator.cpp  TextManipulator.h  TextShapeClassAdapter.cpp  TextShapeClassAdapter.h  TextShapeObjectAdapter.cpp  TextShapeObjectAdapter.h  TextView.cpp  TextView.h  main.cpp
GOF/Bridge/: bridge.vpp
GOF/Bridge/cpp/: CMakeLists.txt  Coord.cpp  Coord.h  Point.cpp  Point.h  View.cpp  View.h  WindowSystemFactory.cpp  WindowSystemFactory.h  main.cpp
GOF/Bridge/cpp/Window/: ApplicationWindow.cpp  ApplicationWindow.h  IconWindow.cpp  IconWindow.h  Window.cpp  Window.h
GOF/Bridge/cpp/Window/WindowImp/: PMWindowImp.cpp  PMWindowImp.h  WindowImp.cpp  WindowImp.h  XWindowImp.cpp  XWindowImp.h
GOF/Builder/: builder.vpp
GOF/Builder/cpp/: CMakeLists.txt  main.cpp
GOF/Builder/cpp/builder/: CountingMazeBuilder.cpp  CountingMazeBuilder.h  MazeBuilder.cpp  MazeBuilder.h  StandardMazeBuilder.cpp  StandardMazeBuilder.h
GOF/Builder/cpp/director/: MazeGame.cpp  MazeGame.h
GOF/Builder/cpp/maze/: Door.cpp  Door.h  MapSite.cpp  MapSite.h  Maze.cpp  Maze.h  Room.cpp  Room.h  Wall.h
GOF/Factory Method/: FactoryMethod.vpp
GOF/Factory Method/cpp/: CMakeLists.txt  main.cpp
GOF/Factory Method/cpp/Creator/: BombedMazeGame.cpp  BombedMazeGame.h  EnchantedMazeGame.cpp  EnchantedMazeGame.h  MazeGame.cpp  MazeGame.h
GOF/Factory Method/cpp/maze/: door.cpp  doorneedingspell.h  mapsite.h  maze.cpp  room.h  roomwithabomb.cpp  roomwithabomb.h  wall.cpp  wall.h
GOF/Prototype/: prototype.vpp
GOF/Prototype/cpp/: CMakeLists.txt  MazeFactory.cpp  MazeFactory.h  MazeGame.cpp  MazeGame.h  MazePrototypeFactory.cpp  MazePrototypeFactory.h  main.cpp
GOF/Prototype/cpp/maze/: bombedwall.cpp  bombedwall.h  door.cpp  door.h  doorneedingspell.cpp  doorneedingspell.h  enchantedroom.cpp  enchantedroom.h  mapsite.h  maze.cpp  maze.h  room.cpp  room.h  roomwithabomb.cpp  roomwithabomb.h  spell.h  wall.cpp  wall.h
GOF/Singleton/cpp/: BombedMazeFactory.cpp  BombedMazeFactory.h  CMakeLists.txt  EnchantedMazeFactory.cpp  EnchantedMazeFactory.h  MazeFactory.cpp  MazeFactory.h  main.cpp
GOF/抽象工厂AbstractFactory/: AbstractFactory.vpp
GOF/抽象工厂AbstractFactory/cpp/: CMakeLists.txt  main.cpp  mazegame.cpp  mazegame.h
GOF/抽象工厂AbstractFactory/cpp/factory/: bombedmazefactory.cpp  bombedmazefactory.h  enchantedmazefactory.cpp  enchantedmazefactory.h  mazefactory.cpp  mazefactory.h
GOF/抽象工厂AbstractFactory/cpp/maze/: bombedwall.cpp  bombedwall.h  door.h  doorneedingspell.cpp  enchantedroom.cpp  enchantedroom.h  mapsite.cpp  maze.h  room.cpp  room.h  spell.cpp
Head First/: Head First.docx
Head First/代理模式 Proxy Pattern/: Proxy Pattern.vpp
Head First/代理模式 Proxy Pattern/Virtual Proxy/: CMakeLists.txt  Virtual Proxy Pattern.vpp  icon.h  imageproxy.cpp  imageproxy.h  main.cpp
Head First/代理模式 Proxy Pattern/code/: CMakeLists.txt  gumballmachine.cpp  gumballmachine.h  gumballmonitor.cpp  gumballmonitor.h  hasquarterstate.h  main.cpp  noquarterstate.cpp  noquarterstate.h  soldstate.cpp  soldstate.h  winnerstate.cpp  winnerstate.h
Head First/命令模式 Command Pattern/: Command Pattern.vpp
Head First/命令模式 Command Pattern/code/: CMakeLists.txt  ceilingfan.cpp  ceilingfan.h  ceilingfanhighcommand.cpp  ceilingfanhighcommand.h  ceilingfanmediumcommand.cpp  ceilingfanmediumcommand.h  ceilingfanoffcommand.cpp  ceilingfanoffcommand.h  command.h  garagedoor.cpp  garagedoor.h  garagedoorclosecommand.cpp  garagedoorclosecommand.h  garagedooropencommand.cpp  garagedooropencommand.h  light.cpp  light.h  lightoffcommand.cpp  lightoffcommand.h  lightoncommand.cpp  lightoncommand.h  macrocommand.cpp  macrocommand.h  main.cpp  nocommand.cpp  nocommand.h  remotecontrol.cpp  remotecontrol.h  stereo.cpp  stereo.h  stereooffcommand.cpp  stereooffcommand.h  stereoonwithcdcommand.cpp  stereoonwithcdcommand.h
Head First/复合模式 Compound Pattern/: Compound.vpp
Head First/复合模式 Compound Pattern/code/: CMakeLists.txt  abstractduckfactory.h  countingduckfactory.cpp  countingduckfactory.h  duckcall.cpp  duckcall.h  duckfactory.cpp  duckfactory.h  flock.cpp  flock.h  goose.cpp  goose.h  gooseadapter.cpp  gooseadapter.h  main.cpp  mallardduck.cpp  mallardduck.h  observable.cpp  observable.h  observer.h  quackable.h  quackcounter.cpp  quackcounter.h  quackobservable.h  quackologist.cpp  quackologist.h  redheadduck.cpp  redheadduck.h  rubberduck.cpp  rubberduck.h
Head First/外观模式 Facade Pattern/: Facade Pattern.vpp
Head First/外观模式 Facade Pattern/code/: CMakeLists.txt  amplifier.cpp  amplifier.h  cdplayer.cpp  cdplayer.h  dvdplayer.cpp  dvdplayer.h  hometheaterfacade.cpp  hometheaterfacade.h  main.cpp  popcornpopper.cpp  popcornpopper.h  projector.cpp  projector.h  screen.cpp  screen.h  theaterlights.cpp  theaterlights.h  tuner.cpp  tuner.h
Head First/工厂方法模式 Factory Pattern/code/: CMakeLists.txt  cheesepizza.cpp  cheesepizza.h  main.cpp  nystylepizzastore.cpp  nystylepizzastore.h  pizza.cpp  pizza.h  pizzastore.cpp  pizzastore.h
Head First/抽象工厂模式 Abstract Factory Pattern/code/: CMakeLists.txt  cheesepizza.h  dough.h  main.cpp  marinarasauce.h  nypizzaingredientfactory.h  nypizzastore.h  pizza.h  pizzaingredientfactory.h  pizzastore.h  plumtomatosauce.h  sauce.h  thickcrustdough.h  (+1 more)
Head First/模板方法模式 Template Method Pattern/: Template Method Pattern.vpp
Head First/状态模式 State Pattern/improve/code/: CMakeLists.txt  gumballmachine.cpp  gumballmachine.h  hasquarterstate.cpp  main.cpp  soldoutstate.cpp  soldoutstate.h  state.h
Head First/策略模式 Strategy Pattern/improve/: CMakeLists.txt  duck.cpp  duck.h  flybehavior.h  flynoway.cpp  flynoway.h  flywithwings.cpp  flywithwings.h  main.cpp  mallarduck.cpp  mallarduck.h  modelduck.cpp  modelduck.h  mutequack.cpp  mutequack.h  quack.cpp  quack.h  quackbehavior.h  rubberduck.cpp  rubberduck.h  squeak.cpp  squeak.h
Head First/迭代器模式 Iterator Pattern/: Iterator Pattern.vpp
(+158 files in other folders)
