cmake_minimum_required(VERSION 3.12)
project(improve)

set(CMAKE_CXX_STANDARD 17)

add_executable(improve main.cpp flybehavior.h flywithwings.cpp flywithwings.h flynoway.cpp flynoway.h duck.cpp duck.h quackbehavior.h quack.cpp quack.h squeak.cpp squeak.h mutequack.cpp mutequack.h mallarduck.cpp mallarduck.h rubberduck.cpp rubberduck.h modelduck.cpp modelduck.h)